[package]
name = "reconnect-demo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "router_a"
path = "src/router_a.rs"

[[bin]]
name = "router_b"
path = "src/router_b.rs"

[dependencies]
zenoh = { path = "../zenoh", default-features = true }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
serde_json = "1"
